# vogueX---Fashion-Recommender

./: README.md  app.py  pyproject.toml  requirements.txt  tempCodeRunnerFile.py
.github/workflows/: code_cov.yml  code_quality.yml  flake8.yml  syntax_check.yml  test-login.yml
docs/: Motivation_Story  SE Project-USE CASES.md  Scalability.md  pitch.md
hairstyle-try-on/: app.py  inference.py  test.py
hairstyle-try-on/functions/: process_data.py
hairstyle-try-on/image_artifact_fill/: artifact_fill.py
hairstyle-try-on/image_landmark_transform/: face_landmark.py
hairstyle-try-on/image_segmentation/: dataset.py  model.py  segment_inference.py  train.py  utils.py
hairstyle-try-on/models/: diffusion.py  ema.py
hairstyle-try-on/runners/: image_editing.py
templates/: verify_otp.html
test/: conftest.py  test_form.py
